[gd_scene load_steps=6 format=2]

[ext_resource path="res://Asset/Shapes/Triangle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Asset/Weapons/PNG/Alternative color/smg.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemy_Gun.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Enemy_Color.gd" type="Script" id=5]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 1097
collision_mask = 1097
script = ExtResource( 2 )

[node name="Color" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Color"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.154443, -1.28899 )
scale = Vector2( 2.82909, 2.64639 )
polygon = PoolVector2Array( -0.0461121, -22.0794, -23.3273, 21.5817, 22.1585, 21.0886 )

[node name="Gun" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
offset = Vector2( 10.993, 35.6793 )
script = ExtResource( 4 )

[node name="Bullet_Position" type="Node2D" parent="Gun"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 18.456, 10.1207 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 135188
collision_mask = 135188

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0.803399, -2.24351 )
scale = Vector2( 3.10195, 2.82357 )
polygon = PoolVector2Array( -0.0461121, -22.0794, -23.3273, 21.5817, 22.1585, 21.0886 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="Gun" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
